<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    tools:context=".RegisterActivity">

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/createAcc"
       android:layout_gravity="center"
       android:layout_marginTop="15dp"
       android:textSize="25sp"
       android:textStyle="bold"/>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_marginTop="5dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/member"/>

      <TextView
          android:id="@+id/signIn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/signIn"
          android:textColor="#0096FF"
          android:paddingStart="10dp"
          android:textStyle="bold"/>

  </LinearLayout>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingTop="15dp"
       android:text="Name"
       android:layout_gravity="left"
       android:textSize="20sp"
       />

   <EditText
      android:id="@+id/name"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:inputType="textPersonName"
     />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingTop="15dp"
       android:text="Email"
       android:layout_gravity="left"
       android:textSize="20sp"
       />

   <EditText
       android:id="@+id/email"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:inputType="textEmailAddress"
       />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingTop="15dp"
       android:text="Password"
       android:layout_gravity="left"
       android:textSize="20sp"
       />

   <EditText
       android:id="@+id/passwordAcc"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:inputType="textPassword"
       />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingTop="15dp"
       android:text="Mobile"
       android:layout_gravity="left"
       android:textSize="20sp"
       />

   <EditText
       android:id="@+id/mobileNo"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:inputType="number"
       android:digits="0123456789"
       android:maxLength="10"
       />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingTop="15dp"
       android:text="Gender"
       android:layout_gravity="left"
       android:textSize="20sp"
       />

   <RadioGroup
       android:id="@+id/gender"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:paddingStart="15dp"
       android:paddingEnd="15dp">

      <RadioButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/male"
          android:textSize="20sp"/>

       <RadioButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/female"
           android:layout_marginLeft="15dp"
           android:textSize="20sp"/>

       <RadioButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/other"
           android:layout_marginLeft="15dp"
           android:textSize="20sp"/>
   </RadioGroup>

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:layout_gravity="bottom"
        android:textSize="20sp"/>


</LinearLayout>